# cypress_fx3_OV5642

./: CMakeLists.txt  README.md  arm-compiler.cmake  arm-toolchain.cmake  bootstrap-arm
src/: CMakeLists.txt  config.h  cyfxgpif2config.h  cyfxtx.c  cyfxusbi2cregmode.c  cyfxuvcdscr.c  cyfxuvcinmem.c  cyfxuvcinmem.h  debug.c  gpio.c  i2c.c  i2c.h  i2c_old.c  sensor.c  sensor.h  uvc.c  uvc.h
src/ov5642/: config.h  ov5642_conifg.h  sensor.c  sensor.h
src/ov5642/settings/: 720p  720p.h  conv.sh  conv2.sh  jpg_to_yuv  ov5642_setting_30fps_720P_1280_720  ov5642_setting_30fps_720P_1280_720.h  qsxga_to_vga  vga.h  yuv_96MHz  yuv_96MHz.h
src/settings/: QSXGA_to_sxga  qvga  svga_preview  vga
tools/: debug.cpp  example.sh  fx3_i2ctest.cpp
